# finta-polars

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  noxfile.py  pyproject.toml  pytest.xml
.github/workflows/: test-benchmark.yml
finta_polars/: __init__.py  expressions.py  indicators.py  schemas.py
tests/: conftest.py  test_indicators.py  test_schemas.py
tests/benchmarks/: test_ema_bench.py  test_macd_bench.py  test_msd_bench.py  test_sma_bench.py  test_smm_bench.py  test_tp_bench.py
